--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body, h1, input, button {
 }
 
 body {
+    
     background-color:#a6ddeb;
     padding: 20px;
      }
@@ -54,11 +55,26 @@ button:hover {
 
 
 #carroselImagem{
-    width: 170px;
-    height: 170px;
+    width: 180px;
+    height: 180px;
     margin-top: 50px;
 }
 
+#carroselImagem{
+    max-width: 200px;
+    width: 100%;
+   /* display: inline-block;
+   border-radius: 50%;*/
+   animation: rodar 5s;
+   transition-duration: 2s;
+}
+@keyframes rodar {
+    from{
+        transform:  rotate(360deg);}
+        /* to{
+            transform:  rotate(90deg);
+        } */
+ }
 .carrosel{
     display: flex;
     flex-direction: column;
